--- a/Smart/Views/Shared/_LoginPartial.cshtml
+++ b/Smart/Views/Shared/_LoginPartial.cshtml
@@ -4,10 +4,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="~/images/favicon/favicon.png" />
-                     
-
-                </a>
+                    Minha Conta</a>
 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <button type="submit" class="dropdown-item">Sair</button>
@@ -24,6 +21,9 @@
                     </a>
                     <a asp-area="" asp-controller="Manage" asp-action="ExternalLogins" title="ExternalLogins" class="dropdown-item">
                         Logins Externos
+                    </a>
+                    <a asp-area="" asp-controller="CategoryPerson" asp-action="List" title="COnfigurations" class="dropdown-item">
+                        Configurações
                     </a>
 
                 </div>
