--- a/Smart/Views/StateProvince/List.cshtml
+++ b/Smart/Views/StateProvince/List.cshtml
@@ -62,17 +62,17 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.StateProvinceCode)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <a asp-action="Edit" asp-route-id="@item.StateProvinceId" class="btn btn-light btn-bdr"> @SharedLocalizer["Editar"] </a>
-                                </td>
-                            </tr>
+                        <tr class="table-row-body">
+                            <td class="table-item-body clickable-row" data-href="@Url.Action("Edit", "StateProvince", new { id = item.StateProvinceId })">
+                                @Html.DisplayFor(modelItem => item.StateProvinceCode)
+                            </td>
+                            <td class="table-item-body clickable-row" data-href="@Url.Action("Edit", "StateProvince", new { id = item.StateProvinceId })">
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.StateProvinceId" class="btn btn-light btn-bdr"> @SharedLocalizer["Editar"] </a>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
