--- a/Smart/Views/StateProvince/_CreateOrUpdate.cshtml
+++ b/Smart/Views/StateProvince/_CreateOrUpdate.cshtml
@@ -15,11 +15,11 @@
         </div>
     </div>
     <div class="form-row">
-            <div class="form-group col-md-6">
-                <label asp-for="CountryRegionId">@Localizer["País"]</label>
-                <select asp-for="CountryRegionId" class="form-control" asp-items="ViewBag.CountryRegionId"></select>
-                <span asp-validation-for="CountryRegionId" class="text-danger"></span>
-            </div>
+        <div class="form-group col-md-6">
+            <label asp-for="CountryID">@Localizer["País"]</label>
+            <select asp-for="CountryID" class="form-control" asp-items="ViewBag.CountryID"></select>
+            <span asp-validation-for="CountryID" class="text-danger"></span>
+        </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
